<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	
	<modelVersion>4.0.0</modelVersion>
	<groupId>plg</groupId>
	<artifactId>libPlg</artifactId>
	<version>0.0.3</version>
	
	<properties>
		<java.version>11</java.version>
	</properties>
	
	<repositories>
		<repository>
			<id>ApromoreCore_SupportLibs</id>
			<name>Maven repository for JARs specific to the Apromore project</name>
			<url>https://raw.github.com/apromore/ApromoreCore_SupportLibs/master/mvn-repo/</url>
		</repository>
		<repository>
			<id>SpringLibraries</id>
			<name></name>
			<url>https://repo.spring.io/libs-release/</url>
		</repository>
	</repositories>
	
	<dependencies>
		<dependency>
			<groupId>colt</groupId>
			<artifactId>colt</artifactId>
			<version>1.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.9.12</version>
		</dependency>
		<dependency>
			<groupId>org.deckfour</groupId>
			<artifactId>openxes</artifactId>
			<version>2.16</version>
		</dependency>
		<dependency>
			<groupId>org.deckfour</groupId>
			<artifactId>spex</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.8.0</version>
		</dependency>
		<dependency>
			<groupId>org.camunda.bpm.model</groupId>
			<artifactId>camunda-bpmn-model</artifactId>
			<version>7.13.0</version>
		</dependency>
		<dependency>
			<groupId>org.camunda.bpm.model</groupId>
			<artifactId>camunda-xml-model</artifactId>
			<version>7.13.0</version>
		</dependency>
		<dependency>
			<groupId>org.python</groupId>
			<artifactId>jython-standalone</artifactId>
			<version>2.7.2</version>
		</dependency>
		<dependency>
			<groupId>org.jdom</groupId>
			<artifactId>jdom2</artifactId>
			<version>2.0.6</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>29.0-jre</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.model=org.adrianwalker.multilinestring</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.processing=org.adrianwalker.multilinestring</arg>
						<arg>--add-exports</arg>
						<arg>jdk.compiler/com.sun.tools.javac.tree=org.adrianwalker.multilinestring</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>delas</name>
			<url>https://maven.pkg.github.com/delas/plg</url>
		</repository>
	</distributionManagement>
</project>